Tweak to proxy config

--- a/mtls-proxy/rp.conf
+++ b/mtls-proxy/rp.conf
@@ -9,7 +9,9 @@ http {
         listen      5000 ssl;
         server_name example;
         ssl_certificate     /tmp/certs/localhost.crt;
-            ssl_certificate_key /tmp/certs/localhost.key;
+        ssl_certificate_key /tmp/certs/localhost.key;
+        ssl_client_certificate /tmp/certs/ca.crt;
+        ssl_verify_client on;
 
         location /svc {
             proxy_pass https://service;
