Changed proxy uri mapping

--- a/mtls-proxy/rp.conf
+++ b/mtls-proxy/rp.conf
@@ -13,7 +13,7 @@ http {
         ssl_client_certificate /tmp/certs/ca.crt;
         ssl_verify_client on;
 
-        location /svc {
+        location / {
             proxy_pass https://service;
             proxy_ssl_certificate         /tmp/certs/okguy.crt;
             proxy_ssl_certificate_key     /tmp/certs/okguy.key;
