--- a/mtls-proxy/rp.conf
+++ b/mtls-proxy/rp.conf
@@ -18,7 +18,7 @@ http {
             proxy_ssl_certificate         /tmp/certs/okguy.crt;
             proxy_ssl_certificate_key     /tmp/certs/okguy.key;
             proxy_ssl_protocols           TLSv1 TLSv1.1 TLSv1.2;
-            proxy_ssl_ciphers             'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
+            proxy_ssl_ciphers             EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH;
             proxy_ssl_trusted_certificate /tmp/certs/ca.crt;
             proxy_ssl_verify       on;
 
